# cppjieba

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  COPYRIGHT  ChangeLog.md  Dockerfile  LICENSE  Makefile  README.md  README_EN.md  Segment.cpp  Segment.h  Trie.cpp  Trie.h  appveyor.yml  demo.cpp  globals.h  main.cpp  setup.py
.github/workflows/: bazel.yml  cmake-arm64.yml  cmake.yml  stale-issues.yml
conf/: CMakeLists.txt  cppjieba_server.conf  server.conf  server_example.conf
cppcommon/: Makefile  argv_functs.cpp  argv_functs.h  config.cpp  config.h  encoding.cpp  encoding.h  file_functs.cpp  file_functs.h  headers.h  http_functs.cpp  http_functs.h  io_functs.cpp  io_functs.h  logger.cpp  logger.h  macro_def.h  map_functs.h  sort_functs.cpp  sort_functs.h  str_functs.cpp  str_functs.h  typedefs.h  vec_functs.cpp  vec_functs.h
cppcommon/testdata/: dict.txt  dict.utf8
cppjieba/: CMakeLists.txt  ChineseFilter.cpp  ChineseFilter.h  HMMSegment.cpp  HMMSegment.h  ISegment.h  ISegment.hpp  KeyWordExt.cpp  KeyWordExt.h  MPSegment.cpp  MPSegment.h  Makefile  MixSegment.cpp  MixSegment.h  SegmentBase.cpp  SegmentBase.h  SegmentBase.hpp  SegmentInterface.h  TransCode.h  Trie.cpp  Trie.h  globals.h  headers.h  structs.h
demo/: Makefile  demo.cpp  example.sh  keywordext.cpp  keywordext_demo.cpp  restart.sh  segment.cpp  segment_demo.cpp  server.cpp  testlines.gbk  testlines.utf8
dict/: CMakeLists.txt  README.md  user.dict.utf8
dicts/: CMakeLists.txt
examples/openharmony/: CMakeLists.txt  README.md  openharmony_demo.cpp
husky/: CMakeLists.txt  Daemon.cpp  HttpReqInfo.hpp  Makefile  ServerFrame.cpp  ServerFrame.h  ThreadManager.hpp
include/cppjieba/: DictTrie.hpp  FullSegment.hpp  HMMModel.hpp  HMMSegment.hpp  HashMap.hpp  Jieba.cpp  Jieba.hpp  KeywordExtractor.hpp  LevelSegment.hpp  MPSegment.hpp  MixSegment.hpp  PosTagger.hpp  PreFilter.hpp  QuerySegment.hpp  SegmentBase.hpp  TextRankExtractor.hpp  Trie.hpp  Unicode.hpp  UnicodeFile.hpp  jieba.py  make_py.sh  make_python.md
limonp/: ArgvContext.hpp  MysqlClient.hpp  config.hpp  io_functs.hpp  logger.hpp  map_functs.hpp  str_functs.hpp  typedefs.h  vec_functs.hpp
python/: README.md
python/cppjieba_module/cppjieba/: CppJieba.py  __init__.py
python/cppjieba_module/cppjieba.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/cppjieba_module/cppjieba/pybind/: cppjieba_pybind.cc
script/: CMakeLists.txt  cjserver  cjserver.start  cjserver.stop
scripts/: CMakeLists.txt  add_header.sh  check_dict.py  cjseg.sh  cjserver  example.sh  filter_dict.py  iconv_dict.py  start.sh  stop.sh
server/: CMakeLists.txt  server.cpp
server/Husky/: EpollServer.hpp  HttpReqInfo.hpp  IRequestHandler.hpp  NetUtils.hpp  ThreadPoolServer.hpp  WorkerThread.hpp
server/husky/: HttpReqInfo.hpp  IRequestHandler.hpp  NetUtils.hpp  ThreadPoolServer.hpp  WorkerThread.hpp  http_req_info.h  irequest_handler.h  net_util.h  thread_pool_server.h
src/: Application.hpp  CMakeLists.txt  ChineseFilter.hpp  DictTrie.hpp  FullSegment.hpp  HMMModel.hpp  HMMSegment.cpp  HMMSegment.h  HMMSegment.hpp  ISegment.hpp  Jieba.hpp  KeyWordExt.cpp  KeyWordExt.h  KeywordExtractor.hpp  LevelSegment.hpp  MPSegment.cpp  MPSegment.h  MPSegment.hpp  Makefile  MixSegment.cpp  MixSegment.h  MixSegment.hpp  PosTagger.hpp  PreFilter.hpp  QuerySegment.hpp  Segment.cpp  Segment.h  SegmentBase.hpp  TextRank.hpp  TfIdfKeyWord.hpp  TransCode.cpp  TransCode.h  TransCode.hpp  Trie.cpp  Trie.h  Trie.hpp  TrieManager.hpp  UglyTrie.hpp  UndirectWeightedGraph.hpp  globals.h  (+6 more)
src/Husky/: CMakeLists.txt  Daemon.cpp  Daemon.h  EpollServer.hpp  HttpReqInfo.hpp  HuskyServer.hpp  ServerFrame.cpp  ServerFrame.h  ServerFrame.hpp  ThreadManager.hpp  globals.h
src/Husky/Limonp/: ArgvContext.hpp  CMakeLists.txt  map_functs.hpp  std_outbound.hpp  str_functs.hpp
src/Limonp/: ArgvContext.hpp  CMakeLists.txt  CodeConverter.hpp  Config.hpp  HandyMacro.hpp  LocalVector.hpp  Logger.hpp  MysqlClient.hpp  StdExtension.hpp  StringUtil.hpp  logger.hpp  md5.hpp  str_functs.hpp
src/cppcommon/: Makefile  argv_functs.cpp  argv_functs.h  encoding.cpp  encoding.h  file_functs.cpp  file_functs.h  headers.h  io_functs.cpp  io_functs.h  logger.cpp  logger.h  map_functs.h  str_functs.cpp  str_functs.h  typedefs.h  vec_functs.h  vec_functs.tcc
src/cppcommon/testdata/: dict.gbk  dict.utf8
src/cppjieba/: CMakeLists.txt  KeyWordExt.cpp  KeyWordExt.h  Trie.cpp  structs.h
src/husky/: CMakeLists.txt  globals.h
src/limonp/: CMakeLists.txt  Logging.hpp  MysqlClient.hpp
test/: CMakeLists.txt  ChineseFilterUt.cpp  Makefile  benchmark.cpp  curl.sh  demo.cpp  dict.txt  keyword_demo.cpp  load_test.cpp  make.sh  segment.cpp  segment_demo.cpp  server.cpp  tagging_demo.cpp  test_performance.cpp  testlines.utf8
test/servertest/: go_load_test.sh  load_test.py  run_curl.sh
test/testdata/: load_test.urls  review.100.res  server.conf  synthetic_doc.utf8  testlines.utf8  userdict.utf8
test/unittest/: CMakeLists.txt  ChineseFilterUt.cpp  TApplication.cpp  TChineseFilter.cpp  TFullSegment.cpp  THMMSegment.cpp  TKeywordExtractor.cpp  TMPSegment.cpp  TMd5.cpp  TMixSegment.cpp  TPosTagger.cpp  TPreFilter.cpp  TQuerySegment.cpp  TSegmentBase.cpp  TSegments.cpp  TTrie.cpp  TTrieManager.cpp  application_test.cpp  jieba_test.cpp  keyword_extractor_test.cpp  pos_tagger_test.cpp  pre_filter_test.cpp  segments_test.cpp  textrank_test.cpp  trie_test.cpp  unicode_path_test.cpp  unicode_test.cpp
test/unittest/gtest-1.6.0/src/.deps/: gtest_main.Plo
test/unittest/gtest/include/gtest/internal/: gtest-port.h
test/unittest/gtest/src/.deps/: gtest-all.Plo
