SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

SET(GTEST_ROOT_DIR googletest/googletest)
INCLUDE_DIRECTORIES(${GTEST_ROOT_DIR} ${GTEST_ROOT_DIR}/include)
ADD_DEFINITIONS(-DGTEST_USE_OWN_TR1_TUPLE=1)
ADD_LIBRARY(gtest STATIC ${GTEST_ROOT_DIR}/src/gtest-all.cc)
TARGET_LINK_LIBRARIES(gtest pthread)

ADD_EXECUTABLE(demo demo.cpp)
if(NOT MSVC)
	ADD_EXECUTABLE(load_test load_test.cpp)
	ADD_SUBDIRECTORY(unittest)
endif()
